fixed val spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ strong {
 }
 .column-33.image {
   padding: 25px 0 0 0;
-  margin-bottom: -20px;
+  margin-bottom: -46px;
 }
 .column-40{
   width: 40%;
